11712406-project2/test/test_11712406_1.out
Error type 3 at Line 2: redefine variable: a