11712406-project2/test/test_11712406_1.spl
int foo(int a) {
    int b[3][3];
    int a[3][3];
    return 0;
}